k8s/02-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
      name: mongo
spec:
      replicas: 1
      selector:
            matchLabels:
                  app: mongo
      template:
            metadata:
                  labels:
                        app: mongo
            spec:
                  containers:
                        - name: mongo
                          image: mongo:6.0
                          volumeMounts:
                                - name: mongo-data
                                  mountPath: /data/db
                  volumes:
                        - name: mongo-data
                          persistentVolumeClaim:
                                claimName: mongo-pvc
