k8s/04-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
      name: backend
spec:
      replicas: 2
      selector:
            matchLabels:
                  app: backend
      template:
            metadata:
                  labels:
                        app: backend
            spec:
                  containers:
                        - name: backend
                          image: wheezybatom/microservices-backend:latest
                          resources:
                                limits:
                                      memory: "512Mi"
                                      cpu: "500m"
                                requests:
                                      memory: "256Mi"
                                      cpu: "250m"
