k8s/07-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
      name: frontend
spec:
      replicas: 2
      selector:
            matchLabels:
                  app: frontend
      template:
            metadata:
                  labels:
                        app: frontend
            spec:
                  containers:
                        - name: frontend
                          image: wheezybatom/microservices-frontend:latest
                          ports:
                                - containerPort: 80
                          resources:
                                limits:
                                      memory: "256Mi"
                                      cpu: "250m"
                                requests:
                                      memory: "128Mi"
                                      cpu: "100m"
