k8s/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
      name: app-ingress
      annotations:
            nginx.ingress.kubernetes.io/rewrite-target: /$1
            nginx.ingress.kubernetes.io/enable-cors: "true"
            nginx.ingress.kubernetes.io/cors-allow-origin: "*"
            nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
            nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
spec:
      ingressClassName: nginx
      rules:
            - http:
                    paths:
                          - path: /api/(.*)
                            pathType: Prefix
                            backend:
                                  service:
                                        name: backend
                                        port:
                                              number: 5000
                          - path: /(.*)
                            pathType: Prefix
                            backend:
                                  service:
                                        name: frontend
                                        port:
                                              number: 80
